--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@frameright/react-image-display-control": "^1.0.5",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
@@ -15,6 +16,7 @@
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "sharp": "^0.32.5",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
